--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-dist
+apps/nestjs/db
 tmp
 /out-tsc
+/db
 
+dist
 # dependencies
 node_modules
 
