--- a/package.json
+++ b/package.json
@@ -1,16 +1,58 @@
 {
-  "name": "@orders-monorepo/source",
+  "name": "@ecommerce-monorepo/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@apollo/server": "^4.9.3",
+    "@nestjs/apollo": "^12.0.9",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/graphql": "^12.0.9",
+    "@nestjs/microservices": "^10.2.7",
+    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/typeorm": "^10.0.0",
+    "axios": "^1.0.0",
+    "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
+    "kafkajs": "^2.2.4",
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
+  },
   "devDependencies": {
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
+    "@nx/eslint-plugin": "16.9.1",
+    "@nx/jest": "16.9.1",
     "@nx/js": "16.9.1",
+    "@nx/linter": "16.9.1",
+    "@nx/nest": "^16.9.1",
+    "@nx/node": "16.9.1",
+    "@nx/webpack": "16.9.1",
     "@nx/workspace": "16.9.1",
+    "@types/jest": "^29.4.0",
+    "@types/node": "18.7.1",
+    "@types/uuid": "^9.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "~8.46.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "nx": "16.9.1",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
-    "typescript": "~5.1.3"
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.1.3",
+    "verdaccio": "^5.0.4"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
