--- a/apps/nestjs/tsconfig.app.json
+++ b/apps/nestjs/tsconfig.app.json
@@ -7,6 +7,12 @@
     "emitDecoratorMetadata": true,
     "target": "es2021"
   },
-  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
+  "exclude": [
+    "jest.config.ts",
+    "src/**/*.spec.ts",
+    "src/**/*.test.ts",
+    "src/**/*.steps.ts",
+    "src/**/*.feature"
+  ],
   "include": ["src/**/*.ts"]
 }
