--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.0.0",
     "graphql": "^16.8.1",
     "graphql-subscriptions": "^2.0.0",
+    "jest-cucumber": "^3.0.1",
     "kafkajs": "^2.2.4",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
@@ -37,6 +38,7 @@
     "@nx/workspace": "16.9.1",
     "@types/jest": "^29.4.0",
     "@types/node": "18.7.1",
+    "@types/supertest": "^2.0.14",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
@@ -47,6 +49,7 @@
     "nx": "16.9.1",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3",
