fix(nestjs): use different networks for serve and test

--- a/apps/nestjs/docker-compose-test.yml
+++ b/apps/nestjs/docker-compose-test.yml
@@ -9,3 +9,8 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=ecommerce
+    networks:
+      - ecommerce-test
+networks:
+  ecommerce-test:
+    driver: bridge
