--- a/apps/nestjs/docker-compose.yml
+++ b/apps/nestjs/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - POSTGRES_DB=ecommerce
     volumes:
       - ./sql/create-table-and-insert-data.sql:/docker-entrypoint-initdb.d/create-table-and-insert-data.sql
+    networks:
+      - ecommerce
   zookeeper:
     image: wurstmeister/zookeeper:latest
     environment:
@@ -20,6 +22,8 @@ services:
       - 2181:2181
       - 2888:2888
       - 3888:3888
+    networks:
+      - ecommerce
   kafka:
     image: wurstmeister/kafka:latest
     restart: 'no'
@@ -34,6 +38,8 @@ services:
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:29092,EXTERNAL://localhost:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+    networks:
+      - ecommerce
   kconnect:
     image: debezium/connect:1.9
     ports:
@@ -57,3 +63,8 @@ services:
       - ./jars/groovy-json-4.0.15.jar:/kafka/libs/groovy-json-4.0.15.jar
       - ./jars/js-scriptengine-22.2.0.1.jar:/kafka/libs/js-scriptengine-22.2.0.1.jar
       - ./jars/js-23.0.1.jar:/kafka/libs/js-23.0.1.jar
+    networks:
+      - ecommerce
+networks:
+  ecommerce:
+    driver: bridge
